--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         SyslogScan-Daemon-SpamDetector
-version:      0.55
+version:      0.56
 version_from: lib/SyslogScan/Daemon/SpamDetector.pm
 installdirs:  site
 requires:
@@ -10,4 +10,4 @@ requires:
     Tie::Cache::LRU:               0
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+generated_by: ExtUtils::MakeMaker version 6.30_01
